update model generator